2006-05-19  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, demos/panning2d/Makefile.am: The previous GL/GLU/GLUT
	detection magic was a bit too simple and fragile, so a more full-blown
	solution from another project (a GLUT binding for Haskell) is used now.

	* admin/autotools/m4/fp_arg_opengl.m4,
	admin/autotools/m4/fp_check_gl_helper.m4,
	admin/autotools/m4/fp_check_gl.m4, admin/autotools/m4/fp_check_win32.m4,
	admin/autotools/m4/fp_check_glu.m4,
	admin/autotools/m4/fp_check_quartz_opengl.m4,
	admin/autotools/m4/fp_check_glut.m4, admin/autotools/m4/fp_path_xtra.m4:
	Added.

2006-05-18  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, demos/panning2d/Makefile.am: Improved GL/GLU/GLUT
	detection magic a bit.

	* tests/altest/altest.c: Improved platform #ifdefs a bit.

2006-05-17  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, tests/altest/altest.c: Compilation fixes for Linux.

	* admin/autotools/m4/alut_check_func.m4: Added.

	* examples/openal-info/openal-info.c: Warning police.

2006-05-16  Sven Panne  <sven.panne@aedion.de>

	* admin/VisualStudio6/openal_info/openal_info.dsp,
	admin/VisualStudio6/panning2d/panning2d.dsp: openal-info and panning2d
	build under Visual Studio 6 now, too.

	* examples/openal-info/openal-info.c: alcIsExtensionPresent in
	Creative's latest SDK has a bug: It is not case-insensitive, so let's
	play safe and use upper case only.

	* demos/panning2d/panning2d.c: Only #include config.h if we have it.

2006-05-15  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c: Fixed NULL vs. 0 confusion. Use more generic
	#defines, so altest works with both EAX 2.0 and EAX 3.0 headers now.

	* admin/VisualStudio6/altest/altest.dsp,
	admin/VisualStudio6/contrib.dsw,
	admin/VisualStudio6/openal_info/openal_info.dsp,
	admin/VisualStudio6/panning2d/panning2d.dsp: Added support for building
	with Visual Studio 6. Currently only altest works, the rest of the
	workspace consists of skeletons only.
